# github_build_test

./: .gitignore  Cargo.toml  PKGBUILD
.github/: dependabot.yaml
.github/workflows/: build.yaml  get_correct_sha.yaml  release_aarch64.yaml  release_pkgbuild.yaml  release_x86.yaml  release_x86_64.yaml
packaging/: PKGBUILD_bin  PKGBUILD_src
packaging/assets/: github_build_test.desktop
src/: main.rs
