[package]
name = "github_build_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bytes = "1"
#once_cell = "1.9"
#rand = "0.8"
relm4 = "0.4.4"
relm4-components = "0.4.4"
#reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
#surf = { version = "2.3", features = ["h1-client-rustls"], default-features = false }
#tokio = { version = "1.15", features = ["rt", "macros", "time", "rt-multi-thread"] }
#tracker = "0.1"